# SprintLogic

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_PR_GUIDELINES.md  CONTRIBUTING.md  README.md  docker-compose.yml  fix_types.py  fix_warnings.py  graph_architecture_analysis.md  patch_search_index.py  plan_import_resolution_visual_overhaul.md  replace_colors.py  start_app.sh  start_dev.sh  update_projects.patch
apps/api/: .env.example  Dockerfile  SprintLogic.spec  alembic.ini  build_backend.sh  dsml_test.py  dump_ast.py  fix_db.py  init_db.py  main.py  migrate.py  package-lock.json  package.json  pyproject.toml  pytest.ini  sprintlogic-backend.spec  test_ai.py  test_dbapi.py  test_dbapi_aiosqlite.py  test_dbapi_load.py  test_scanner.py  test_skeleton.py  test_strats.py
apps/api/app/: main.py
apps/api/app/application/: ai_agent.py  analyze_blast_radius.py  ast_auditor.py  cli.py  create_organization.py  delta_sync.py  graph_collapse.py  graph_metrics.py  insight_worker.py  invite_member.py  jarvis_agent.py  list_members.py  remove_member.py  scan_codebase.py  scan_repo.py  sdd_pipeline.py  semantic_splitter.py  tdd_guard.py  telemetry_daemon.py
apps/api/app/domain/: exceptions.py  git_models.py  git_repository.py  graph_models.py  graph_repository.py  organization.py  organization_member.py  path_validator.py  project.py  sdd_models.py  user.py
apps/api/app/infrastructure/: config.py  file_watcher.py  kanban_sync.py
apps/api/app/interfaces/: auth_gateway.py  organization_repository.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_add_tenancy_tables.py  15a94234a707_sqlite_sidecar_schema.py  26d44ba31345_add_title_to_conversation.py  60df0142290b_add_git_repositories.py  88ac0deb7f74_add_insight_extracted_to_conversations.py  8fdd7667e3f4_add_projects_and_memory.py  914f7f90ce02_init_sqlite.py  9ef762f3539a_add_graph_models.py  a9456940b7d5_add_ast_cas_models.py  (+6 more)
apps/api/scripts/: ts_parser.js
apps/api/sprintlogic_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/static/: __next.__PAGE__.txt  __next._head.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt
apps/api/tests/: test_ast_parser.py  test_ast_parser_fqn.py  test_credential_manager.py  test_git_gateway.py  test_import_resolver.py  test_llm_gateway.py  test_path_validator.py  test_scan_codebase.py  test_scan_codebase_imports.py  test_scan_repo.py  test_sdd_pipeline.py
(+214 files in other folders)
