[project]
name = "sprintlogic-api"
version = "0.1.0"
description = "FastAPI backend for sprintLogic"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pytest>=8.0.0",
  "sqlalchemy>=2.0.0",
  "httpx>=0.28.0",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.16.0",
  "pyjwt>=2.8.0",
  "cryptography>=42.0.0",
  "supabase>=2.4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "ruff>=0.9.0",
  "mypy>=1.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["migrations"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["migrations*"]
