[project]
name = "sprintlogic-api"
version = "0.1.0"
description = "FastAPI backend for sprintLogic"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "sqlalchemy>=2.0.0",
  "httpx>=0.28.0",
  "alembic>=1.16.0",
  "aiosqlite>=0.20.0",
  "sqlite-vec>=0.1.6",
  "cachetools>=5.5.0",
  "keyring>=25.0.0",
  "litellm>=1.0.0",
  "tree-sitter>=0.23.0",
  "tree-sitter-python>=0.23.0",
  "tree-sitter-typescript>=0.23.0",
  "tree-sitter-java",
  "tree-sitter-php",
  "tree-sitter-go",
  "tree-sitter-html",
  "tree-sitter-css",
  "ruff>=0.9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "ruff>=0.9.0",
  "mypy>=1.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E402", "E501", "E722"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["migrations", ".venv", "venv", "test_env"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["migrations*"]
